Actualizacion del hostname.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8761
-
-eureka.instance.hostname=localhost
+eureka.instance.hostname=eureka-server
 eureka.server.eviction-interval-timer-in-ms=5000
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
