--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8761
 eureka.instance.hostname=eureka-server
-eureka.server.eviction-interval-timer-in-ms=5000
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
